--- a/delivered-projects.html
+++ b/delivered-projects.html
@@ -20,7 +20,7 @@
         </span>
         <ul class="menu">
             <li>
-              <a class="navbar-link" href="">ABOUT US</a>  
+              <a class="navbar-link" href="./contact.html">ABOUT US</a>  
 
             <li class="services">
               <a class="navbar-link" href="">SERVICES</a>  
@@ -32,10 +32,10 @@
               </ul>
             </li>
             <li>
-              <a class="navbar-link" href="">PROJECTS</a>  
+              <a class="navbar-link" href="./project.html">PROJECTS</a>  
             </li>
             <li>
-              <a class="navbar-link" href="">CONTACT</a>  
+              <a class="navbar-link" href="./contact.html">CONTACT</a>  
             </li>
         </ul>
         </div>
